<resources>
    <string name="app_name">Skintone Harmony</string>
    <string name="title">SKINTONE HARMONY</string>
    <string name="button1">Upload Image</string>
    <string name="subtitle1">Still confused\n about your skintone?</string>
    <string name="subtitle2">Afraid your makeup\n color wont match?</string>
    <string name="subtitle3">Afraid your skin\n will be damaged?</string>
    <string name="action_setting">Settings</string>
    <string name="action_quit">Close App</string>
    <string name="previewImage">Preview Image</string>
    <string name="chooseImage">Choose Image</string>
    <string name="button2">Open Gallery</string>
    <string name="button3">Open Camera</string>
    <string name="button4">Start Analysis</string>
    <string name="imageDescription">Preview For Image Analysis</string>
    <string name="action_take_image">Take Image From Camera</string>
    <string name="result1_text">YOUR COLOR TONE IS HERE!</string>
    <string name="show_result_text">Show Result</string>
    <string name="setting_text">Settings</string>
    <string name="typeOfSkin">Type : %s</string>
    <string name="button5">Create New Analysis</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="analysis_results">Analysis Results %s</string>
    <string name="description">Description</string>
    <string name="setting_darkMode">Dark Mode</string>
    <string name="version_app">V.1.0</string>
    <string name="brand_comparison">Brand Comparison</string>
</resources>