<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="25dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="5dp"
    android:theme="@style/Base.Theme.SkintoneHarmony"
    >

    <TextView
        style="@style/TextTitleSetting"
        android:id="@+id/analysis_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/analysis_results"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="186dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/vector_image_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/analysis_results" />

    <TextView
        style="@style/TextTitleSetting"
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        style="@style/TextSubtitleSetting"
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp"/>

    <TextView
        style="@style/TextTitleSetting"
        android:id="@+id/brand_comparison_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/brand_comparison"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

    <TextView
        style="@style/TextSubtitleSetting"
        android:id="@+id/textViewBrands"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/brand_comparison_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp"/>

    <View
        style="@style/BorderSetting"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewBrands"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
